[tool.poetry]
name = "openbb-econdb"
version = "1.4.1"
description = "EconDB extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_econdb" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.5.8"
aiohttp-client-cache = "^0.11.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
econdb = "openbb_econdb:econdb_provider"
