[tool.poetry]
name = "openbb-famafrench"
version = "1.1.1"
description = "Fama-French data integration for OpenBB Platform."
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_famafrench" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.5.8"

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
famafranch = "openbb_famafrench:famafrench_provider"

[tool.poetry.plugins."openbb_core_extension"]
famafrench = "openbb_famafrench.famafrench_router:router"
