[tool.poetry]
name = "openbb-federal-reserve"
version = "1.5.1"
description = "US Federal Reserve Data Extension for OpenBB"
authors = ["OpenBB <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_federal_reserve" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openpyxl = "^3.1.5"
openbb-core = "^1.6.0"
openbb-economy = "^1.6.0"
openbb-fixedincome = "^1.6.0"
openbb-platform-api = "^1.3.0"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
federal_reserve = "openbb_federal_reserve:federal_reserve_provider"

[tool.poetry.plugins."openbb_core_extension"]
federal_reserve = "openbb_federal_reserve.router:router"
