[tool.poetry]
name = "openbb-finviz"
version = "1.4.1"
description = "Finviz extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_finviz" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.5.8"
finvizfinance = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
finviz = "openbb_finviz:finviz_provider"
