[tool.poetry]
name = "openbb-multpl"
version = "1.3.0"
description = "Public data on historical S&P Multiples."
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_multpl" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
multpl = "openbb_multpl:multpl_provider"
