[project]
name = "openbb-oecd"
version = "2.0.0"
description = "OECD provider extension for OpenBB Platform."
authors = [{ name = "OpenBB Team", email = "hello@openbb.co" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "openbb-core[pandas]>=2.0.0",
    "requests>=2.31",
]

[project.scripts]
generate-oecd-cache = "openbb_oecd.utils.generate_cache:main"

[project.entry-points."openbb_provider_extension"]
oecd = "openbb_oecd:oecd_provider"

[project.entry-points."openbb_core_extension"]
oecd = "openbb_oecd.oecd_router:router"

[project.urls]
Homepage = "https://openbb.co"
Repository = "https://github.com/OpenBB-finance/OpenBB"

[dependency-groups]
dev = ["openbb-devtools>=2.0.0"]

[build-system]
requires = ["hatchling>=1.25", "requests>=2.31"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openbb_oecd"]

[tool.hatch.build.targets.sdist]
# The cache asset is gitignored; the build hook materializes it before
# packaging so both sdist and wheel ship a self-contained artifact.
include = [
    "openbb_oecd",
    "openbb_oecd/assets/oecd_cache.json.xz",
    "hatch_build.py",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv.sources]
openbb-core = { path = "../../core", editable = true }
openbb-devtools = { path = "../../extensions/devtools", editable = true }

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["D", "E", "W", "F", "S", "UP", "I", "PLC", "PLE", "PLR", "PLW", "SIM", "T20"]
ignore = [
    "PLR2004", "PLR0913", "PLR0915", "PLC0415",
    "E402", "E501",
    "D202", "D203", "D205", "D206", "D210", "D212", "D213", "D214",
    "D215", "D300", "D400", "D404", "D405", "D406", "D407", "D408",
    "D409", "D410", "D411", "D413", "D415", "D416", "D417",
]

[tool.ruff.lint.per-file-ignores]
"openbb_oecd/oecd_router.py" = ["ARG001", "PLC0415", "SLF001", "PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0917"]
"openbb_oecd/utils/generate_cache.py" = ["T201", "PLR0912", "PLR0914", "PLR0915", "PLR0917", "BLE001", "S112", "S113"]
"openbb_oecd/utils/helpers.py" = ["PLR0912"]
"openbb_oecd/utils/query_builder.py" = ["PLR0911", "PLR0912", "PLR0913", "PLR0917", "SLF001"]
"openbb_oecd/utils/table_builder.py" = ["PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0917", "SLF001", "B023"]
"openbb_oecd/utils/metadata/_cache_mixin.py" = ["PLR0912"]
"openbb_oecd/utils/metadata/_indicator_mixin.py" = ["PLR0912"]
"openbb_oecd/utils/metadata/_loader_mixin.py" = ["PLR0912", "PLR0914", "PLC0415", "ARG002"]
"openbb_oecd/utils/metadata/_public_api_mixin.py" = ["PLR0912"]
"openbb_oecd/utils/metadata/_query_mixin.py" = ["PLR0912"]
"openbb_oecd/utils/metadata/_search_mixin.py" = ["PLR0912"]
"openbb_oecd/models/*.py" = ["ARG002", "PLC0415", "PLR0912"]
"tests/**" = ["S101", "S108", "D", "SIM105", "SIM117"]
"integration/**" = ["S101", "S108", "D", "SIM105", "SIM117", "PLC0415", "ARG001"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty]
[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["openbb_oecd"]
exclude = ["tests", "integration", "openbb_oecd/utils/generate_cache.py"]

[tool.ty.rules]
unresolved-import = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["record_http: VCR-backed HTTP cassette tests"]
