[tool.poetry]
name = "openbb-sec"
version = "1.6.0"
description = "SEC extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_sec" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.6.3"
aiohttp-client-cache = "^0.11.0"
aiosqlite = "^0.20.0"
defusedxml = ">=0.7.1"
xmltodict = "^0.13.0"
beautifulsoup4 = "^4.12"
lxml = ">=5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
sec = "openbb_sec:sec_provider"
