[tool.poetry]
name = "openbb-stockgrid"
version = "1.6.0"
description = "stockgrid extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_stockgrid" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
stockgrid = "openbb_stockgrid:stockgrid_provider"
