[tool.poetry]
name = "openbb-tiingo"
version = "1.5.1"
description = "Tiingo extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_tiingo" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.5.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
tiingo = "openbb_tiingo:tiingo_provider"
