[tool.poetry]
name = "openbb-tradingeconomics"
version = "1.5.1"
description = "Trading Economics extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_tradingeconomics" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.5.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
tradingeconomics = "openbb_tradingeconomics:tradingeconomics_provider"
